# a10y

./: README.md  a10y.css  a10y.py  a10y.spec  app.py  availability_ui.css  availability_ui.py  availability_ui.tcss  config.toml  main.py  post_request.txt  pyproject.toml  requirements.txt  widgets.py
.github/workflows/: pyinstaller.yml  release.yml
src/: a10y.css  a10y.py  a10y.spec  app.py  config.toml  main.py  widgets.py
src/a10y.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
