[project]
name = "a10y"
version = "0.0.1"
readme = "README.md"
requires-python = "<4.0,>=3.11"
dependencies = [
    "aiohttp==3.9.0 ; python_full_version >= '3.8'",
    "aiosignal==1.3.1 ; python_full_version >= '3.7'",
    "async-timeout==4.0.3 ; python_full_version >= '3.7'",
    "attrs==23.1.0 ; python_full_version >= '3.7'",
    "certifi==2023.11.17 ; python_full_version >= '3.6'",
    "charset-normalizer==3.3.2 ; python_full_version >= '3.7'",
    "click==8.1.7 ; python_full_version >= '3.7'",
    "frozenlist==1.4.0 ; python_full_version >= '3.8'",
    "idna==3.4 ; python_full_version >= '3.5'",
    "importlib-metadata==6.8.0 ; python_full_version >= '3.8'",
    "linkify-it-py==2.0.2 ; python_full_version >= '3.7'",
    "markdown-it-py[linkify,plugins]==3.0.0 ; python_full_version >= '3.8'",
    "mdit-py-plugins==0.4.0 ; python_full_version >= '3.8'",
    "mdurl==0.1.2 ; python_full_version >= '3.7'",
    "msgpack==1.0.7 ; python_full_version >= '3.8'",
    "multidict==6.0.4 ; python_full_version >= '3.7'",
    "pygments==2.17.2 ; python_full_version >= '3.7'",
    "requests==2.31.0 ; python_full_version >= '3.7'",
    "rich==13.7.0 ; python_full_version >= '3.7'",
    "textual==0.43.2 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "textual-autocomplete==2.1.0b0 ; python_full_version >= '3.7.8' and python_full_version < '4.0'",
    "textual-dev==1.2.1 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "tomli==2.0.1 ; python_full_version >= '3.7'",
    "typing-extensions==4.8.0 ; python_full_version >= '3.8'",
    "uc-micro-py==1.0.2 ; python_full_version >= '3.7'",
    "urllib3==2.1.0 ; python_full_version >= '3.8'",
    "yarl==1.9.3 ; python_full_version >= '3.7'",
    "zipp==3.17.0 ; python_full_version >= '3.8'",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # Tell setuptools to look inside 'src'